refactor: 서비스 레이어와 컨트롤러 레이어가 엔티티를 직접 반환하던 것에서 DTO를 반환하도록 리팩토링